--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "public/vendor"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "kineticjs": "~5.0.1"
   }
 }
