--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.1.1",
-    "kineticjs": "~5.0.1"
+    "kineticjs": "~5.0.1",
+    "underscore": "~1.6.0"
   }
 }
