--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "piotrekbass",
   "license": "MIT",
   "dependencies": {
-    "koa": "~0.5.0"
+    "koa": "~0.5.0",
+    "koa-static": "~1.4.3",
+    "koa-favicon": "~1.0.1"
   }
 }
