--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "projekt-macka",
-  "version": "0.0.0",
-  "description": "Some stuff to practice html5",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/piotrekbass/project-macka.git"
-  },
-  "keywords": [
-    "html5"
-  ],
-  "engines": {
-    "node": "0.11.x"
-  },
-  "author": "piotrekbass",
-  "license": "MIT",
-  "dependencies": {
-    "koa": "~0.5.0",
-    "koa-static": "~1.4.3",
-    "koa-favicon": "~1.0.1"
-  }
+    "name": "projekt-macka",
+    "version": "0.0.0",
+    "description": "Some stuff to practice html5",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/piotrekbass/project-macka.git"
+    },
+    "keywords": [
+        "html5"
+    ],
+    "engines": {
+        "node": "0.11.x"
+    },
+    "author": "piotrekbass",
+    "license": "MIT",
+    "dependencies": {
+        "koa": "~0.5.0",
+        "koa-static": "~1.4.3",
+        "koa-favicon": "~1.0.1",
+        "bower": "~1.2.8"
+    },
+    "scripts": {
+        "postinstall": "./node_modules/bower/bin/bower install"
+    }
 }
